Fix alignment of the "do not track" checkbox label

--- a/redesign/css/main.css
+++ b/redesign/css/main.css
@@ -254,6 +254,10 @@ a:hover {
   color: #636466;
 }
 
+#legal-notice-modal .checkbox input[type="checkbox"] {
+    margin-left: inherit;
+}
+
 .bottom-menu {
   background-color: rgba(0, 0, 0, 0.25);
   position: fixed;
